# FrenchTrainer

./: .gitignore  CLAUDE.md  README.md  cl_app.py  docker-compose.yml  flashcards.db  main.py  pyproject.toml  setup_local_dev.sh  start.sh
.junie/: guidelines.md
backend/: Dockerfile  alembic.ini  cl_app.py  config.py  main.py  package-lock.json  tts.py  utils.py
backend/.chainlit/: config.toml
backend/db/: adjective.py  flashcard.py  session.py  verb.py
backend/llm/: utils.py
backend/llm/prompts/: basic_prompt.txt
backend/migrations/: env.py
backend/migrations/versions/: 05db262f4283_add_adjectives.py  68f32b4c1080_add_english_text_to_verb.py  d09e7abcbc92_initial.py
backend/models/: adjective.py  base.py  flashcard.py  verb.py
backend/routers/: adjectives.py  base.py  flashcards.py  verbs.py
backend/templates/flashcards/: _flashcard_form.html  index.html  verb_flashcard.html
backend/tests/: conftest.py  test_utils.py
backend/tests/test_routes/: test_flashcards.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdjectiveCard.tsx  AdjectiveForm.tsx  AdjectiveSearch.tsx  FlashCard.tsx  FlashcardForm.tsx  Layout.tsx  Navigation.tsx  VerbCard.tsx  VerbForm.tsx  VerbSearch.tsx
frontend/src/pages/: Adjectives.tsx  AdjectivesPage.tsx  FlashcardsPage.tsx  VerbsPage.tsx
frontend/src/services/: api.ts
src/: db.py  util.py  utils.py
src/models/: flashcard.py  verb.py
templates/flashcards/: index.html
